fea: 获取全部品牌数据接口完成
